# axum-boilerplate

./: Cargo.toml  README.md  askama.toml  build.rs  notes.md  sailfish.toml  todo.txt
data/: database.sqlite  database.sqlite-shm  database.sqlite-wal
migrations/: 20230606200402_users.sql  20230606204618_user_registrations.sql  20230607114350_user_logins.sql  20230616204157_user_temp_uuid.sql  20230718210846_threads.sql  20230719234026_posts.sql
public/css/: style.css  style.css.map
public/js/: unpoly.min.css  unpoly.min.js
src/: constants.rs  context.rs  database.rs  error.rs  layers.rs  mailer.rs  main.rs  router.rs  state.rs  style.scss  traits.rs  util.rs  utils.rs
src/apps/: mod.rs
src/apps/forum/: handlers.rs  mod.rs  models.rs  routes.rs  serializers.rs
src/apps/forum/templates/: get-thread.html  get-thread.stpl  mod.rs  new-thread.stpl
src/apps/user/: constants.rs  handlers.rs  layers.rs  mod.rs  models.rs  routes.rs  serializers.rs  sign-up.html
src/apps/user/templates/: admin_user-edit.html  admin_user-edit.stpl  admin_user-list.html  admin_user-list.stpl  email_invite.html  email_invite.stpl  email_log-in.html  email_log-in.stpl  log-in.html  log-in.scss  log-in.stpl  log-out.stpl  mod.rs  send-invite.html  send-invite.stpl  sign-up.html  sign-up.stpl
src/database/: connection.rs  mod.rs  seed.rs  utils.rs
src/templates/: base-htmx.html  base.html  base.stpl  email_base.html  error.html  error.stpl  mod.rs
