[package]
name = "axum-bp"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1.28.1", features = ["full"]}
axum = "0.6.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
lazy-regex = "2"
async-trait = "0.1"
uuid = {version = "1", features = ["v4","fast-rng",]}
askama = "0.12.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
dotenv = "0.15.0"
chrono = "0.4.26"
strum = "0.25.0"
strum_macros = "0.24.3"
log = "0.4"
env_logger = "0.9"
reqwest = "0.11.18"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"

[build-dependencies]
walkdir = "2.3.2"